# lion

./: .gitignore  EVALUATION_AUDIT_CHECKLIST.md  EVALUATION_AUDIT_REPORT.md  HANG_FIXING_STORY.md  LICENSE  PROOF_AUDIT_CHECKLIST.md  PROOF_AUDIT_REPORT.md  README.md  TCB_and_limitations.md  ci.sh  count_all.py  count_lines.py  setup.sh  verus.config.example
lion/: Cargo.toml
lion-benchmark/correctness-stress/tokio-latest/: Cargo.toml
lion-benchmark/ironfleet/lion-io/: Cargo.toml
lion-benchmark/ironfleet/lion-io/src/: lib.rs
lion-benchmark/micro/: Cargo.toml  README.md  plot.py  run.sh
lion-benchmark/micro/ref-result/: PROVENANCE.txt  README.md  fs_raw.csv  tcp_mt_raw.csv  tcp_st_raw.csv  timer_mt_raw.csv  timer_st_raw.csv
lion-benchmark/micro/ref-result-2/: PROVENANCE.txt  README.md  fs_raw.csv  tcp_mt_raw.csv  tcp_st_raw.csv  timer_mt_raw.csv  timer_st_raw.csv
lion-benchmark/micro/ref-result-3/: tcp_mt_raw.csv  tcp_st_raw.csv  timer_mt_raw.csv
lion-benchmark/real-world/axum-work-stealing/: Cargo.toml  README.md  calibrate.sh  plot.py  plot_chunk.py  plot_offload.py  plot_paper.py  probe_idle.sh  run.sh  sync.sh
lion-benchmark/real-world/axum-work-stealing/bench/: gen_targets.py  lognorm_mu.py  work_cv.lua
lion-benchmark/real-world/axum-work-stealing/src/: lib.rs
lion-executor/: Cargo.toml  verify.sh
lion-executor-spec/: Cargo.toml  verify.sh
lion-executor-spec/src/: events.rs  fifo_queue.rs  injection_schedule.rs  lib.rs  log.rs  types.rs
lion-executor-spec/src/contracts/: bounded_deferred_poll.rs  bounded_drain_poll.rs  bounded_injection_poll.rs  bounded_reactor_wake_poll.rs  bounded_task_wake_poll.rs  mod.rs
lion-executor-spec/src/invariants/: fifo_task_selection.rs  mod.rs  park_drain_reactor_wake.rs  poll_within_tick.rs  tick_has_drain_deferred.rs  tick_has_drain_task_wake.rs  tick_has_park.rs  tick_has_pop_injection.rs  tick_polls_if_runnable.rs  valid_task_polling.rs
lion-executor/doc/: invariants_and_tick.md  proof_outline.md
lion-executor/src/: blocking.rs  config.rs  handle.rs  lib.rs  tls.rs
lion-executor/src/collections/: mod.rs  mpsc_queue.rs  task_slab.rs  tid_ledger.rs  vec_deque.rs
lion-executor/src/executor/: enter.rs  ext.rs  mod.rs  new.rs  next_task.rs  park.rs  poll_task.rs  tick.rs  wake_deferred.rs
lion-executor/src/framework/: mod.rs
lion-executor/src/proof/: fifo_helpers.rs  helpers.rs  invariants.rs  mod.rs  preservation.rs
lion-executor/src/spec/: fifo_queue.rs  log.rs  mod.rs
lion-executor/src/types/: boxed_future.rs  duration.rs  instant.rs  join_handle.rs  mod.rs  reactor.rs  task.rs  task_id.rs  waker.rs
lion-framework-spec/: Cargo.toml  verify.sh
lion-framework-spec/src/: action_safety.rs  async_contract.rs  lib.rs  local_liveness.rs  module_spec.rs
lion-liveness/: Cargo.toml  verify.sh
lion-liveness/doc/: .gitignore  build.sh  main.tex
lion-liveness/src/: lib.rs
lion-liveness/src/composed/proof/: assumption_satisfiable.rs  contract_bridges.rs  depth_generalization.rs  deregister_ownership.rs  end_to_end.rs  env_step.rs  inhabitation.rs  inhabitation_budget.rs  inhabitation_depth.rs  inhabitation_goal_defer.rs  inhabitation_goal_io.rs  inhabitation_goal_taskwake.rs  inhabitation_goal_wake.rs  mod.rs  module_lifting.rs  rid_uniqueness.rs
lion-liveness/src/composed/spec/: alignment.rs  assumptions.rs  contract.rs  mod.rs  progress.rs  (+3 more)
lion-liveness/src/executor/: mod.rs
lion-liveness/src/framework/: mod.rs
lion-liveness/src/reactor/: mod.rs
lion-liveness/src/utilities/: mod.rs
lion-reactor/: Cargo.toml  verify.sh
lion-reactor-spec/: Cargo.toml  verify.sh
lion-reactor-spec/src/: bridge.rs  events.rs  lib.rs  log.rs  types.rs
lion-reactor-spec/src/contracts/: bounded_io_wakeup.rs  bounded_timer_wakeup.rs
lion-reactor-spec/src/invariants/: deregister_io_in_cycle.rs  inbound_deregister_io_result.rs  inbound_register_io_result.rs  io_ready_in_park.rs  io_reg_uniqueness.rs  io_waker_validity.rs  mod.rs  park_has_timestamp.rs  park_poll_once.rs  register_io_in_cycle.rs  set_waker_active_io.rs  timer_deadline_future.rs  timer_io_disjoint.rs  timer_reg_uniqueness.rs  timer_waker_validity.rs  wake_has_registration.rs  wake_on_expired.rs  wake_on_io_ready.rs
lion-reactor/doc/: proof_outline.md
lion-reactor/src/: alloc_verified.rs  handle.rs  lib.rs  readiness.rs  resource_slab.rs  resource_slot.rs  resource_slot_wrapper.rs
lion-reactor/src/invariants/: data_inv.rs  inbound_register_io_result.rs  io_ready_in_park.rs  io_reg_uniqueness.rs  mod.rs  park_poll_once.rs  register_io_in_cycle.rs  set_waker_active_io.rs  timer_deadline_future.rs  timer_io_disjoint.rs  wake_has_registration.rs  wake_on_expired.rs
lion-reactor/src/proof/: io_anchor_bridge.rs  liveness_preservation.rs  mod.rs  park_safety.rs  preservation.rs  preservation_ext.rs  safety_preservation.rs
lion-reactor/src/reactor/: enter.rs  ext.rs  mod.rs  new.rs  park.rs  register.rs  timer.rs  waker.rs
lion-reactor/src/spec/: log.rs  mod.rs  predicates.rs  types.rs
lion-reactor/src/types/: interest.rs  interrupt_handle.rs  io_event.rs  io_event_queue.rs  io_result.rs  mod.rs  poll.rs  resource_id.rs  source.rs  time.rs  timer_entry.rs  waker.rs
lion-slab/: Cargo.toml  verify.sh
lion-slab/src/: lib.rs  slab.rs
lion-timer-wheel/: Cargo.toml  verify.sh
lion-timer-wheel/src/: helpers.rs  lib.rs  vec_map.rs  wheel.rs
lion-utility/: Cargo.toml  verify.sh
lion-utility/doc/: proof_outline.md  verification_design.md
lion-utility/lion-utility-spec/: Cargo.toml  verify.sh
lion-utility/lion-utility-spec/src/: framework.rs  lib.rs  view_types.rs
lion-utility/src/: lib.rs  task.rs
lion-utility/src/fs/: mod.rs
lion-utility/src/net/: addr.rs  mod.rs  udp.rs
lion-utility/src/sync/: broadcast.rs  broadcast_kernel.rs  channel_kernel.rs  mod.rs  mpsc.rs  mutex.rs  notify.rs  oneshot.rs  oneshot_kernel.rs  semaphore.rs  watch.rs  watch_kernel.rs
lion-utility/src/time/: interval.rs  interval_kernel.rs  mod.rs  timeout.rs  timeout_kernel.rs
lion-utility/tests/: cancel.rs  decisions.rs
lion/src/: lib.rs  multi.rs
(+385 files in other folders)
