[package]
name = "lion-slab"
version = "0.1.0"
edition = "2021"
authors = ["Lion Team"]
description = "A verified generic slab data structure for Lion runtime"
license = "MIT OR Apache-2.0"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "db81a74" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true
