[package]
name = "lion-utility-spec"
version = "0.1.0"
edition = "2021"
authors = ["Lion Team"]
description = "Shared verification template for Lion utilities (framework + generic utility invariants)"
license = "MIT OR Apache-2.0"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "db81a74" }
lion-framework-spec = { path = "../../lion-framework-spec", package = "lion-framework-spec" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors"
